--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -170,6 +170,12 @@ nav + .container {
   width: 100%;
 }
 
+#profile-header {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 #profile-avatar {
   width: 200px;
   height: 200px;
