--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -83,10 +83,19 @@
 <div class="row">
   <div class="col-sm-3">
     <h4 id="sidebar-username">@{{ user.username }}</h4>
-    <p>{{ user.bio }}</p>
+      {% if user.bio %}
+        <p class="card-bio">{{ user.bio }}</p>
+      {% else %}
+        <p class="card-bio">No bio</p>
+      {% endif %}
     <p class="user-location">
-      <span class="bi bi-map"></span>
-      {{ user.location }}
+      <span class="bi bi-map">
+        {% if user.location %}
+          {{ user.location }}
+        {% else %}
+          No location
+        {% endif %}
+      </span>
     </p>
   </div>
 
