Getting ready for code review

--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -29,6 +29,7 @@
               {% if g.user.is_following(user) %}
               <form method="POST"
                     action="/users/stop-following/{{ user.id }}">
+                    {{ form.hidden_tag() }}
                 <button class="btn btn-primary btn-sm">
                   Unfollow
                 </button>
@@ -36,6 +37,7 @@
               {% else %}
               <form method="POST"
                     action="/users/follow/{{ user.id }}">
+                    {{ form.hidden_tag() }}
                 <button class="btn btn-outline-primary btn-sm">
                   Follow
                 </button>
@@ -44,7 +46,11 @@
               {% endif %}
 
             </div>
-            <p class="card-bio">BIO HERE</p>
+            {% if user.bio %}
+              <p class="card-bio">{{ user.bio }}</p>
+            {% else %}
+              <p class="card-bio">No bio</p>
+            {% endif %}
           </div>
         </div>
       </div>
