--- a/templates/users/followers.html
+++ b/templates/users/followers.html
@@ -36,7 +36,11 @@
             {% endif %}
 
           </div>
-          <p class="card-bio">{{ g.user.bio }}</p>
+          {% if follower.bio %}
+          <p class="card-bio">{{ follower.bio }}</p>
+          {% else %}
+          <p class="card-bio">No bio</p>
+          {% endif %}
         </div>
       </div>
     </div>
