--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+<!-- Use background for div -->
 <div id="warbler-hero"
      class="full-width">
      <img src="{{ user.header_image_url }}"
