--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -43,7 +43,7 @@
           </li>
           <li class="stat">
             <p class="small">Likes</p>
-            <h4>TBD</h4>
+            <h4>{{ g.user.liked_messages | length }}</h4>
           </li>
 
           <li class="ms-auto">
