--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -45,7 +45,7 @@
             <p class="small">Likes</p>
             <h4>
               <a href="/users/{{ user.id }}/likes">
-              {{ g.user.liked_messages | length }}
+              {{ user.liked_messages | length }}
               </a>
             </h4>
           </li>
