--- a/templates/messages/show.html
+++ b/templates/messages/show.html
@@ -43,10 +43,11 @@
             </form>
             {% endif %}
             {% if g.user.id != message.user.id %}
-            {% if message.id in g.user.liked_messages|map(attribute='id') %}
+            {% if message in g.user.liked_messages %}
               <form method="POST"
                     action="/messages/{{ message.id }}/unlike">
                 {{ g.csrf_form.hidden_tag() }}
+                <input type="hidden" name="redirect" value="/messages/{{ message.id }}">
                 <button class="bg-transparent border-0" type="submit">
                   <i class="bi bi-star-fill message-like"></i>
                 </button>
@@ -55,6 +56,7 @@
               <form method="POST"
                       action="/messages/{{ message.id }}/like">
                       {{ g.csrf_form.hidden_tag() }}
+                <input type="hidden" name="redirect" value="/messages/{{ message.id }}">
                 <button class="bg-transparent border-0" type="submit">
                   <i class="bi bi-star message-like"></i>
                 </button>
