Added testing for follower and following routes

--- a/templates/home-anon.html
+++ b/templates/home-anon.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+<!-- Anonymouse Home Template - used for testing  -->
   <div class="home-hero">
     <h1>What's Happening?</h1>
     <h4>New to Warbler?</h4>
