--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<!-- User Detail Template - used for testing -->
 <div id="warbler-hero"
     style="background-image: url('{{ user.header_image_url }}')"
      class="full-width">
