--- a/templates/users/following.html
+++ b/templates/users/following.html
@@ -1,5 +1,6 @@
 {% extends 'users/detail.html' %}
 {% block user_details %}
+<!-- Following Template - used for testing -->
 <div class="col-sm-9">
   <div class="row">
 
